[tool.poetry]
name = "statistical-tests-100"
version = "0.1.0"
description = ""
authors = ["Matteo Capitani <matteocapitani@yandex.com>"]
readme = "README.md"
packages = [{include = "statistical_tests_100", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.3.1"
numpy = "^1.24.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
